crates/compiler/tests/parse_errors/list_pattern_end.txt
-- UNFINISHED LIST PATTERN ---------------------------------------- src/Main.elm

I was expecting a closing square bracket to end this list pattern:

4|   [a b] -> 1
        ^
Try adding a ] to see if that helps?

